# mpd-wrapped

./: .gitignore  Cargo.toml  README.md  flake.nix
migrations/01-initial/: up.sql
migrations/02-add-duration/: up.sql
src/: main.rs
src/mpd/: client.rs  listen_iterator.rs  mod.rs  status_iterator.rs
src/persistence/: mod.rs  sqlite.rs
