[package]
name = "mpd-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# MPD client
mpd = "0.1"

# Date/time
chrono = "0.4"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
pico-args = "0.5.0"
