[package]
name = "mpd-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
mpd = "0.1"

chrono = "0.4"

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
serde = { version = "1.0.228", features = ["derive"] }

directories = "6.0.0"

pico-args = "0.5.0"
include_dir = "0.7.4"
